<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/reg_textedit_left_right_padding"
            android:paddingRight="@dimen/reg_textedit_left_right_padding"
            android:paddingTop="@dimen/reg_textedit_left_top_padding" >

            <LinearLayout
                android:id="@+id/reg_phone_email_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/phone_select"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/reg_phone_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/reg_email_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/reg_textedit_left_top_padding" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <EditText
                        android:id="@+id/reg_input_account_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reg_input_phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/reg_get_captcha_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_bg_color"
                        android:text="@string/reg_get_captcha"
                        android:textColor="@color/text" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/reg_textedit_left_top_padding" >

                <EditText
                    android:id="@+id/reg_input_passwd_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_input_passwd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/reg_textedit_left_top_padding" >

                <EditText
                    android:id="@+id/reg_confirm_passwd_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_confirm_passwd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/reg_textedit_left_top_padding" >

                <EditText
                    android:id="@+id/reg_input_captcha_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_input_captcha" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/reg_textedit_left_top_padding" >

                <Button
                    android:id="@+id/reg_register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg_color"
                    android:text="@string/reg_register"
                    android:textColor="@color/text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>