<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.hardthings.shetuanplus.MainActivity" >

    <FrameLayout
        android:id="@+id/main_framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/homepage_tab_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/homepage_plaza_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/homepage_plaza_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/homepage_plaza" />

            <TextView
                android:id="@+id/homepage_plaza_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homepage_plaza"
                android:textColor="@color/text_unselected" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/homepage_activity_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/homepage_activity_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/homepage_activity" />

            <TextView
                android:id="@+id/homepage_activity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homepage_activity"
                android:textColor="@color/text_unselected" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/homepage_publish_activity_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/homepage_pulish_activity" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/homepage_club_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/homepage_club_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/homepage_club" />

            <TextView
                android:id="@+id/homepage_club_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homepage_club"
                android:textColor="@color/text_unselected" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/homepage_user_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/homepage_user_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/homepage_user" />

            <TextView
                android:id="@+id/homepage_user_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homepage_user"
                android:textColor="@color/text_unselected" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>